@@ -1,3 +1,7 @@
+2007-07-08 Randy McMurchy <randy@linuxfromscratch.org>
+	* Update the CUPS section of the Makefile to remove the proper
+	  files (upstream changed the S/K naming)
+
 2007-06-20 Dan Nicholson <dnicholson@linuxfromscratch.org>
 	* Update lease info path for dhcpcd-3.x.
 
